Issue #1277 feat: update swagger docs for content APIs and retireConcept API fix

--- a/docs/domain_model_v2/api-docs/swagger/domain_model_api/domain_model_apisv3.yaml
+++ b/docs/domain_model_v2/api-docs/swagger/domain_model_api/domain_model_apisv3.yaml
@@ -1915,7 +1915,7 @@ paths:
                 description: 'API response code '
       security: []
   '/{domainId}/concepts/retire/{conceptId}':
-    post:
+    delete:
       summary: Retires Specific Concept.
       description: >-
         This API retires the Concept. The concept is marked as deprecated and
