Issue #000 fix: test-samza configuration update.

--- a/platform-jobs/samza/testSamza/src/main/config/test-samza.properties
+++ b/platform-jobs/samza/testSamza/src/main/config/test-samza.properties
@@ -13,7 +13,11 @@ metrics.reporter.jmx.class=org.apache.samza.metrics.reporter.JmxReporterFactory
 
 # Task
 task.class=org.ekstep.jobs.samza.task.TestSamzaTask
-task.inputs=kafka.learning.graph.events
+task.inputs=kafka.test.samza
+task.checkpoint.factory=org.apache.samza.checkpoint.kafka.KafkaCheckpointManagerFactory
+task.checkpoint.system=kafka
+task.checkpoint.replication.factor=1
+task.commit.ms=10000
 
 # Serializers
 serializers.registry.json.class=org.apache.samza.serializers.JsonSerdeFactory
