--- a/language-platform/pom.xml
+++ b/language-platform/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>com.ilimi</groupId>
@@ -7,10 +8,10 @@
 		<version>1.0-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
-    <groupId>org.ekstep</groupId>
-    <artifactId>language-platform</artifactId>
-    <packaging>pom</packaging>
-    <name>EkStep Language Platform</name>
+	<groupId>org.ekstep</groupId>
+	<artifactId>language-platform</artifactId>
+	<packaging>pom</packaging>
+	<name>EkStep Language Platform</name>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -75,24 +76,50 @@
 				</plugin>
 
 				<plugin>
-		            <groupId>org.codehaus.mojo</groupId>
-		            <artifactId>buildnumber-maven-plugin</artifactId>
-		            <version>1.1</version>
-		            <executions>
-		               <execution>
-		                  <phase>validate</phase>
-		                  <goals>
-		                     <goal>create</goal>
-		                  </goals>
-		               </execution>
-		            </executions>
-		            <configuration>
-		               <doCheck>true</doCheck>
-		               <doUpdate>true</doUpdate>
-		            </configuration>
-	         	</plugin>
+					<groupId>org.codehaus.mojo</groupId>
+					<artifactId>buildnumber-maven-plugin</artifactId>
+					<version>1.1</version>
+					<executions>
+						<execution>
+							<phase>validate</phase>
+							<goals>
+								<goal>create</goal>
+							</goals>
+						</execution>
+					</executions>
+					<configuration>
+						<doCheck>true</doCheck>
+						<doUpdate>true</doUpdate>
+					</configuration>
+				</plugin>
 			</plugins>
 		</pluginManagement>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+			</plugin>
+
+			<plugin>
+				<groupId>org.jacoco</groupId>
+				<artifactId>jacoco-maven-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>default-prepare-agent</id>
+						<goals>
+							<goal>prepare-agent</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>default-report</id>
+						<phase>prepare-package</phase>
+						<goals>
+							<goal>report</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
 	</build>
 
 </project>
