--- a/platform-tools/kernel-extension/pom.xml
+++ b/platform-tools/kernel-extension/pom.xml
@@ -42,26 +42,34 @@
 						<target>1.8</target>
 					</configuration>
 				</plugin>
-
-				<plugin>
-        			<groupId>org.codehaus.mojo</groupId>
-        			<artifactId>cobertura-maven-plugin</artifactId>
-        			<version>2.7</version>
-        			<configuration>
-        				<aggregate>true</aggregate>
-        				<outputDirectory>coverageReport</outputDirectory>
-        				<formats>
-                        	<format>html</format>
-                        	<format>xml</format>
-                    	</formats>
-          				<check>
-          					<haltOnFailure>false</haltOnFailure>
-          				</check>
-          				<skip>true</skip>
-        			</configuration>
-      			</plugin>
 			</plugins>
 		</pluginManagement>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+			</plugin>
+
+			<plugin>
+				<groupId>org.jacoco</groupId>
+				<artifactId>jacoco-maven-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>default-prepare-agent</id>
+						<goals>
+							<goal>prepare-agent</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>default-report</id>
+						<phase>prepare-package</phase>
+						<goals>
+							<goal>report</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
 	</build>
 
 </project>
