--- a/searchIndex-platform/pom.xml
+++ b/searchIndex-platform/pom.xml
@@ -26,7 +26,7 @@
 		<module>module/searchindex-elasticsearch</module>
 		<module>module/searchindex-common</module>
 		<module>module/search-actors</module>
-        <module>module/search-api</module>
+		<module>module/search-api</module>
 	</modules>
 
 	<dependencies>
@@ -91,6 +91,32 @@
 				</plugin>
 			</plugins>
 		</pluginManagement>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+			</plugin>
+
+			<plugin>
+				<groupId>org.jacoco</groupId>
+				<artifactId>jacoco-maven-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>default-prepare-agent</id>
+						<goals>
+							<goal>prepare-agent</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>default-report</id>
+						<phase>prepare-package</phase>
+						<goals>
+							<goal>report</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
 	</build>
 
 </project>
