--- a/language-platform/pom.xml
+++ b/language-platform/pom.xml
@@ -98,11 +98,35 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.20</version>
 			</plugin>
 
 			<plugin>
 				<groupId>org.jacoco</groupId>
 				<artifactId>jacoco-maven-plugin</artifactId>
+				<version>0.7.9</version>
+				<configuration>
+					<excludes>
+						<exclude>**/common/**</exclude>
+						<exclude>**/dto/**</exclude>
+						<exclude>**/enums/**</exclude>
+						<exclude>**/batch/**</exclude>
+						<exclude>**/models/**</exclude>
+						<exclude>**/model/**</exclude>
+						<exclude>**/EnrichActor**</exclude>
+						<exclude>**/language/controller/**</exclude>
+						<exclude>**/wordchain/**</exclude>
+						<exclude>**/importer/**</exclude>
+						<exclude>**/services/**</exclude>
+						<exclude>**/servlet/**</exclude>
+						<exclude>**/interceptor/**</exclude>
+						<exclude>**/Base**</exclude>
+						<exclude>**/ControllerUtil**</exclude>
+						<exclude>**/Indowordnet**</exclude>
+						<!-- Import is not yet implemented -->
+						<exclude>**/Import*/**</exclude>
+					</excludes>
+				</configuration>
 				<executions>
 					<execution>
 						<id>default-prepare-agent</id>
