--- a/platform-jobs/pom.xml
+++ b/platform-jobs/pom.xml
@@ -45,11 +45,23 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.20</version>
 			</plugin>
 
 			<plugin>
 				<groupId>org.jacoco</groupId>
 				<artifactId>jacoco-maven-plugin</artifactId>
+				<version>0.7.9</version>
+				<configuration>
+					<excludes>
+						<exclude>**/common/**</exclude>
+						<exclude>**/dto/**</exclude>
+						<exclude>**/enums/**</exclude>
+						<exclude>**/pipeline/**</exclude>
+						<exclude>**/servlet/**</exclude>
+						<exclude>**/interceptor/**</exclude>
+					</excludes>
+				</configuration>
 				<executions>
 					<execution>
 						<id>default-prepare-agent</id>
