Issue #1279 feat: Samza - Data sync issue fix - Implementation

--- a/platform-jobs/samza/audit-history-indexer/src/main/config/local.audit-history-indexer.properties
+++ b/platform-jobs/samza/audit-history-indexer/src/main/config/local.audit-history-indexer.properties
@@ -20,7 +20,7 @@ task.checkpoint.replication.factor=1
 task.commit.ms=60000
 
 # Serializers
-serializers.registry.json.class=org.apache.samza.serializers.JsonSerdeFactory
+serializers.registry.json.class=org.ekstep.jobs.samza.serializers.EkstepJsonSerdeFactory
 serializers.registry.metrics.class=org.apache.samza.serializers.MetricsSnapshotSerdeFactory
 
 # Systems
