Issue #1256 fix: neo4j driver upgrade with implicit transaction open/close changes

--- a/language-platform/module/services/src/main/resources/application.conf
+++ b/language-platform/module/services/src/main/resources/application.conf
@@ -67,3 +67,11 @@ s3.ecar.folder=ecar_files
 
 #Orchestrator env properties
 env="https://dev.ekstep.in/api/language"
+
+# Cassandra Configuration
+keyspace.name=content_store
+keyspace.table=content_data
+orchestrator.keyspace.name=script_store
+orchestrator.keyspace.table=script_data
+cassandra.host=localhost
+cassandra.port=9042
