Issue #1283 feat: Samza - Data sync issue fix - Dev deployment and Testing

--- a/platform-jobs/samza/image-tagging/src/main/config/local.image-tagging.properties
+++ b/platform-jobs/samza/image-tagging/src/main/config/local.image-tagging.properties
@@ -21,7 +21,7 @@ task.commit.ms=60000
 task.opts=-agentlib:jdwp=transport=dt_socket,address=localhost:9009,server=y,suspend=y
 
 # Serializers
-serializers.registry.json.class=org.apache.samza.serializers.JsonSerdeFactory
+serializers.registry.json.class=org.ekstep.jobs.samza.serializers.EkstepJsonSerdeFactory
 serializers.registry.metrics.class=org.apache.samza.serializers.MetricsSnapshotSerdeFactory
 
 # Systems
