--- a/platform-jobs/samza/object-lifecycle/src/main/config/local.object-lifecycle.properties
+++ b/platform-jobs/samza/object-lifecycle/src/main/config/local.object-lifecycle.properties
@@ -20,7 +20,7 @@ task.checkpoint.replication.factor=1
 task.commit.ms=60000
 
 # Serializers
-serializers.registry.json.class=org.apache.samza.serializers.JsonSerdeFactory
+serializers.registry.json.class=org.ekstep.jobs.samza.serializers.EkstepJsonSerdeFactory
 serializers.registry.metrics.class=org.apache.samza.serializers.MetricsSnapshotSerdeFactory
 
 # Systems
