--- a/platform-jobs/samza/object-lifecycle/src/main/config/object-lifecycle.properties
+++ b/platform-jobs/samza/object-lifecycle/src/main/config/object-lifecycle.properties
@@ -14,13 +14,13 @@ metrics.reporter.jmx.class=org.apache.samza.metrics.reporter.JmxReporterFactory
 # Task
 task.class=org.ekstep.jobs.samza.task.ObjectLifecycleTask
 task.inputs=kafka.__env__.learning.graph.events
-#task.checkpoint.factory=org.apache.samza.checkpoint.kafka.KafkaCheckpointManagerFactory
-#task.checkpoint.system=kafka
-#task.checkpoint.replication.factor=1
-#task.commit.ms=60000
+task.checkpoint.factory=org.apache.samza.checkpoint.kafka.KafkaCheckpointManagerFactory
+task.checkpoint.system=kafka
+task.checkpoint.replication.factor=1
+task.commit.ms=60000
 
 # Serializers
-serializers.registry.json.class=org.apache.samza.serializers.JsonSerdeFactory
+serializers.registry.json.class=org.ekstep.jobs.samza.serializers.EkstepJsonSerdeFactory
 serializers.registry.metrics.class=org.apache.samza.serializers.MetricsSnapshotSerdeFactory
 
 # Systems
