Issue #1277 feat: code cleanUp - delete unused file from LP repo

--- a/language-platform/module/indexes/src/test/resources/application.conf
+++ b/language-platform/module/indexes/src/test/resources/application.conf
@@ -11,3 +11,18 @@ ActorSystem{
   		throughput = 1
 	}
 }
+graph.dir="/data/testgraphDB"
+redis.host=localhost
+redis.port=6379
+redis.maxConnections=128
+akka.request_timeout=30
+
+elastic-search-host="http://localhost"
+elastic-search-port=9200
+ignoreStartWordsList=["<Sentence","id=","<fs","head=","case_name=","paradigm=","name=","inf="]
+tagNamesList=["NN","NST","PRP","DEM","VM","VAUX","JJ","RB","PSP","RP","CC","WQ","QF","QC","QO","CL","INTF","INJ","NEG","*C","RDP","ECH","UNK","NP","VGF","VGNF","VGINF","VGNN","JJP","RBP","NEGP","CCP","FRAGP","BLK"]
+discardTokensList=["NNP","((","))","SYM"]
+attributesTagIdentifier=af
+specialCharRegEx="^([$&+,:;=?@#|!]*)$"
+numberRegEx="^([+-]?\\d*\\.?\\d*)$"
+defaultTokenCountAfterWord=10
