--- a/platform-core/graph-engine/module/graph-engine/src/test/resources/application.conf
+++ b/platform-core/graph-engine/module/graph-engine/src/test/resources/application.conf
@@ -11,3 +11,9 @@ ActorSystem{
   		throughput = 1
 	}
 }
+
+elastic-search-host=http://localhost
+elastic-search-port=9200
+query-search-fields=name,title,lemma
+bulk-load-batch-size=500
+connection-timeout=30
