--- a/platform-modules/actors/src/test/resources/application.conf
+++ b/platform-modules/actors/src/test/resources/application.conf
@@ -22,6 +22,8 @@ content.metadata.visibility.parent=["textbookunit", "courseunit", "lessonplanuni
 # Cassandra Connector Configuration
 keyspace.name=content_store
 keyspace.table=content_data
+cassandra.host=localhost
+cassandra.port=9042
 
 #Cache-Manager Configuration
 cache.type="in-memory"
