--- a/platform-core/graph-engine/module/cache-manager/src/test/resources/application.conf
+++ b/platform-core/graph-engine/module/cache-manager/src/test/resources/application.conf
@@ -3,6 +3,7 @@
 redis.host=localhost
 redis.port=6379
 redis.maxConnections=128
+akka.request_timeout=30
 
 # Cache-Manager Configurations
 cache.type="in-memory"
