Issue #1277 feat: code cleanUp - delete unused file from LP repo

--- a/language-platform/module/tools/lexile-algorithms/src/test/resources/application.conf
+++ b/language-platform/module/tools/lexile-algorithms/src/test/resources/application.conf
@@ -15,7 +15,23 @@ LearningActorSystem{
     }
   }
 }
-
+LanguageActorSystem {
+  akka {
+    actor {
+      default-dispatcher {
+        type = "Dispatcher"
+        executor = "fork-join-executor"
+        fork-join-executor {
+          parallelism-min = 1
+          parallelism-factor = 2.0
+          parallelism-max = 4
+        }
+        # Throughput for default Dispatcher, set to 1 for as fair as possible
+        throughput = 1
+      }
+    }
+  }
+}
 # Learning-Service Configuration
 content.metadata.visibility.parent=["textbookunit", "courseunit", "lessonplanunit"]
 
@@ -44,7 +60,7 @@ save.directory=/data/tmp/temp/
 # Content 2 vec analytics URL
 CONTENT_TO_VEC_URL="http://172.31.27.233:9000/content-to-vec"
 
-# FOR CONTENT WORKFLOW PIPELINE (CWP) 
+# FOR CONTENT WORKFLOW PIPELINE (CWP)
 
 #--Content Workflow Pipeline Mode
 OPERATION_MODE=TEST
