Issue #1281 feat: test case - build fix
Signed-off-by: Rashmi <rashminrocks93@gmail.com>

--- a/platform-modules/manager/src/test/resources/application.conf
+++ b/platform-modules/manager/src/test/resources/application.conf
@@ -34,15 +34,15 @@ redis.maxConnections=128
 content.publish_task.enabled=false
 
 #directory location where store unzip file
-dist.directory=/data/tmp/dist/
-output.zipfile=/data/tmp/story.zip
-source.folder=/data/tmp/temp2/
-save.directory=/data/tmp/temp/
+dist.directory="/data/tmp/dist/"
+output.zipfile="/data/tmp/story.zip"
+source.folder="/data/tmp/temp2/"
+save.directory="/data/tmp/temp/"
 
 # Content 2 vec analytics URL
 CONTENT_TO_VEC_URL="http://172.31.27.233:9000/content-to-vec"
 
-# FOR CONTENT WORKFLOW PIPELINE (CWP) 
+# FOR CONTENT WORKFLOW PIPELINE (CWP)
 
 #--Content Workflow Pipeline Mode
 OPERATION_MODE=TEST
@@ -69,8 +69,6 @@ s3.env=dev
 
 #Environment specific buckets
 s3.bucket.dev="ekstep-public"
-s3.bucket.qa=ekstep-public-qa
-s3.bucket.prod=ekstep-public-prod
 
 #S3 Region configuration
 s3.region=AP_SOUTHEAST_1
@@ -83,11 +81,12 @@ s3.bundle.folder=bundle
 s3.media.folder=media
 s3.ecar.folder=ecar_files
 
-graph.dir=/data/graphDB
+graph.dir="/data/testgraphDB"
 akka.request_timeout=30
 environment.id=10000000
 graph.ids=domain
-graph.passport.key.base=31b6fd1c4d64e745c867e61a45edc34a
+graphId=domain
+graph.passport.key.base="31b6fd1c4d64e745c867e61a45edc34a"
 route.domain="bolt://localhost:7687"
 route.bolt.write.domain="bolt://localhost:7687"
 route.bolt.read.domain="bolt://localhost:7687"
