Issue #1303 fix: Updated S3 Configuration

--- a/platform-modules/manager/src/test/resources/application.conf
+++ b/platform-modules/manager/src/test/resources/application.conf
@@ -68,10 +68,11 @@ env="https://dev.ekstep.in/api/learning"
 s3.env=dev
 
 #Environment specific buckets
+s3.public.bucket="ekstep-public-dev"
 s3.bucket.dev="ekstep-public"
 
 #S3 Region configuration
-s3.region=AP_SOUTHEAST_1
+s3.region=AP_SOUTH_1
 
 #Folder configuration
 s3.content.folder=content
