--- a/platform-jobs/samza/publish-pipeline/src/main/config/publish-pipeline.properties
+++ b/platform-jobs/samza/publish-pipeline/src/main/config/publish-pipeline.properties
@@ -63,7 +63,7 @@ graph.dir="/data/graphDB"
 graph.ids=["domain","language","en","hi","ka","te","ta"]
 platform.auth.check.enabled=false
 platform.cache.ttl=3600000
-backend_telemetry_topic=__env__backend_event_topic
+backend_telemetry_topic=__env__telemetry.backend
 
 #S3 server configurations
 
