Issue #1280 feat: Corrected the test case execution configuration

--- a/platform-core/graph-engine/module/graph-engine/pom.xml
+++ b/platform-core/graph-engine/module/graph-engine/pom.xml
@@ -28,10 +28,10 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.testng</groupId>
-			<artifactId>testng</artifactId>
-			<version>6.8.8</version>
+			<groupId>org.neo4j</groupId>
+			<artifactId>neo4j-bolt</artifactId>
 			<scope>test</scope>
+			<version>3.0.4</version>
 		</dependency>
 	</dependencies>
 </project>
