--- a/platform-modules/pom.xml
+++ b/platform-modules/pom.xml
@@ -27,6 +27,7 @@
 		<module>service</module>
 		<module>actors</module>
 		<module>content-manager</module>
+		<module>framework-manager</module>
 	</modules>
 
 	<dependencies>
