--- a/platform-modules/framework-manager/pom.xml
+++ b/platform-modules/framework-manager/pom.xml
@@ -16,6 +16,13 @@
 			<version>1.0-SNAPSHOT</version>
 			<type>jar</type>
 		</dependency>
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>javax.servlet-api</artifactId>
+			<version>3.1.0</version>
+			<scope>provided</scope>
+		</dependency>
+		
 	</dependencies>
 
 </project>
