--- a/platform-modules/ekstep-framework/pom.xml
+++ b/platform-modules/ekstep-framework/pom.xml
@@ -1,21 +1,13 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
-	<parent>
-		<groupId>com.ilimi</groupId>
-		<artifactId>ekstep-modules</artifactId>
-		<version>1.0-SNAPSHOT</version>
-		<relativePath>../pom.xml</relativePath>
-	</parent>
-	<artifactId>ekstep-manager</artifactId>
-	<dependencies>
-		<dependency>
-			<groupId>org.ekstep</groupId>
-			<artifactId>content-manager</artifactId>
-			<version>1.0-SNAPSHOT</version>
-			<type>jar</type>
-		</dependency>
-		<dependency>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+  <modelVersion>4.0.0</modelVersion>
+  <parent>
+    <groupId>com.ilimi</groupId>
+    <artifactId>ekstep-modules</artifactId>
+    <version>1.0-SNAPSHOT</version>
+  </parent>
+  <artifactId>ekstep-framework</artifactId>
+  <dependencies>
+  <dependency>
 			<groupId>commons-io</groupId>
 			<artifactId>commons-io</artifactId>
 			<version>2.4</version>
@@ -130,4 +122,5 @@
 			</plugins>
 		</pluginManagement>
 	</build>
+  
 </project>
