--- a/platform-modules/service/pom.xml
+++ b/platform-modules/service/pom.xml
@@ -48,6 +48,12 @@
 		</dependency>
 		<dependency>
 			<groupId>com.ilimi</groupId>
+			<artifactId>ekstep-framework</artifactId>
+			<version>1.0-SNAPSHOT</version>
+			<type>jar</type>
+		</dependency>
+		<dependency>
+			<groupId>com.ilimi</groupId>
 			<artifactId>orchestrator-service</artifactId>
 			<version>1.0-SNAPSHOT</version>
 			<type>jar</type>
