Issue #1291 feat: disable full ecar generation for collection content.

--- a/platform-jobs/samza/publish-pipeline/src/main/config/publish-pipeline.properties
+++ b/platform-jobs/samza/publish-pipeline/src/main/config/publish-pipeline.properties
@@ -101,3 +101,4 @@ MAX_ASSET_FILE_SIZE_LIMIT=20971520
 RETRY_ASSET_DOWNLOAD_COUNT=1
 
 lp.tempfile.location=__lp_tmpfile_location__
+publish.collection.fullecar.disable=__collection_fullecar_disable__
