--- a/platform-jobs/samza/publish-pipeline/src/main/config/local.publish-pipeline.properties
+++ b/platform-jobs/samza/publish-pipeline/src/main/config/local.publish-pipeline.properties
@@ -99,3 +99,4 @@ cassandra.host=localhost
 cassandra.port=9042
 
 lp.tempfile.location=__lp_tmpfile_location__
+publish.collection.fullecar.disable=true
