Issue #1290 feat: Publish API changes - Implementation (Push event to Kafka)

--- a/platform-jobs/samza/publish-pipeline/src/main/config/publish-pipeline.properties
+++ b/platform-jobs/samza/publish-pipeline/src/main/config/publish-pipeline.properties
@@ -13,7 +13,8 @@ metrics.reporter.jmx.class=org.apache.samza.metrics.reporter.JmxReporterFactory
 
 # Task
 task.class=org.ekstep.jobs.samza.task.PublishPipelineTask
-task.inputs=kafka.__env__.telemetry.raw
+#task.inputs=kafka.__env__.telemetry.raw
+task.inputs=kafka.__env__.learning.job.request
 task.checkpoint.factory=org.apache.samza.checkpoint.kafka.KafkaCheckpointManagerFactory
 task.checkpoint.system=kafka
 task.checkpoint.replication.factor=1
@@ -98,5 +99,6 @@ save.directory=/tmp/temp/
 MAX_CONTENT_PACKAGE_FILE_SIZE_LIMIT=52428800
 MAX_ASSET_FILE_SIZE_LIMIT=20971520
 RETRY_ASSET_DOWNLOAD_COUNT=1
+MAX_PUBLISH_RETRY=5
 
 lp.tempfile.location=__lp_tmpfile_location__
