Issue #1290 feat: Publish API changes - Implementation (Push event to Kafka)

--- a/platform-jobs/samza/publish-pipeline/src/main/config/publish-pipeline.properties
+++ b/platform-jobs/samza/publish-pipeline/src/main/config/publish-pipeline.properties
@@ -64,7 +64,8 @@ graph.dir="/data/graphDB"
 graph.ids=["domain","language","en","hi","ka","te","ta"]
 platform.auth.check.enabled=false
 platform.cache.ttl=3600000
-backend_telemetry_topic=__env__telemetry.backend
+backend_telemetry_topic=__env__.telemetry.backend
+failed_event_topic=__env__.learning.job.request
 
 #S3 server configurations
 
