Issue #000 fix: test cases fix

--- a/platform-modules/ekstep-framework/src/test/resources/application.conf
+++ b/platform-modules/ekstep-framework/src/test/resources/application.conf
@@ -85,7 +85,7 @@ s3.ecar.folder=ecar_files
 graph.dir="/data/testgraphDB"
 akka.request_timeout=30
 environment.id=10000000
-graph.ids=domain
+graph.ids=["domain"]
 graphId=domain
 graph.passport.key.base="31b6fd1c4d64e745c867e61a45edc34a"
 route.domain="bolt://localhost:7687"
