Issue #1290 feat: Publish API changes - Implementation (Push event to Kafka)

--- a/platform-jobs/samza/publish-pipeline/src/main/config/publish-pipeline.properties
+++ b/platform-jobs/samza/publish-pipeline/src/main/config/publish-pipeline.properties
@@ -104,4 +104,4 @@ RETRY_ASSET_DOWNLOAD_COUNT=1
 
 lp.tempfile.location=__lp_tmpfile_location__
 publish.collection.fullecar.disable=__collection_fullecar_disable__
-MAX_ITERATION_COUNT_FOR_SAMZA_JOB=__max_iteration_count_for_samza_job__
+max.iteration.count.samza.job=__max_iteration_count_for_samza_job__
