--- a/platform-jobs/samza/publish-pipeline/src/main/config/local.publish-pipeline.properties
+++ b/platform-jobs/samza/publish-pipeline/src/main/config/local.publish-pipeline.properties
@@ -31,7 +31,7 @@ systems.kafka.samza.msg.serde=json
 systems.kafka.streams.metrics.samza.msg.serde=metrics
 systems.kafka.consumer.zookeeper.connect="localhost:2181"
 systems.kafka.consumer.auto.offset.reset=largest
-systems.kafka.producer.bootstrap.servers="localhost:9092"
+systems.kafka.producer.bootstrap.servers=localhost:9092
 
 # Job Coordinator
 job.coordinator.system=kafka
@@ -98,3 +98,4 @@ cassandra.port=9042
 
 lp.tempfile.location=__lp_tmpfile_location__
 publish.collection.fullecar.disable=true
+max.iteration.count.samza.job=2
