--- a/platform-modules/manager/pom.xml
+++ b/platform-modules/manager/pom.xml
@@ -122,6 +122,12 @@
 	    		<version>3.1.2</version>
 	    		<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.ilimi</groupId>
+  			<artifactId>cassandra-connector</artifactId>
+  			<version>1.0-SNAPSHOT</version>
+  			<type>jar</type>
+		</dependency>
 	</dependencies>
 
 	<build>
