Issue #1334 feat: Updated Code

--- a/platform-modules/service/src/main/resources/application.conf
+++ b/platform-modules/service/src/main/resources/application.conf
@@ -118,7 +118,7 @@ platform-api-url="http://localhost:8080/language-service"
 MAX_ITERATION_COUNT_FOR_SAMZA_JOB=2
 
 
-#	DIAL Code Cassandra Configuration
-
+# DIAL Code Configuration
 dialcode.keyspace.name="dialcode_store"
 dialcode.keyspace.table="dial_code"
+MAX_NO_OF_ALLOWED_DIALCODE_PER_REQUEST=1000
