--- a/platform-core/graph-engine/module/graph-dac-api/pom.xml
+++ b/platform-core/graph-engine/module/graph-dac-api/pom.xml
@@ -27,10 +27,10 @@
 			<version>3.3.2</version>
 		</dependency>
 		<dependency>
-			<groupId>org.apache.kafka</groupId>
-			<artifactId>kafka_2.11</artifactId>
-			<version>0.10.0.1</version>
-			<scope>compile</scope>
+		    <groupId>log4j</groupId>
+		    <artifactId>log4j</artifactId>
+		    <version>1.2.15</version>
+		    	<scope>compile</scope>
 			<exclusions>
 				<exclusion>
 					<artifactId>jmxri</artifactId>
