--- a/platform-tools/kernel-extension/transaction-event-handler/pom.xml
+++ b/platform-tools/kernel-extension/transaction-event-handler/pom.xml
@@ -36,7 +36,13 @@
 		</dependency>
 		<dependency>
 			<groupId>org.ekstep</groupId>
-			<artifactId>graph-dac-api</artifactId>
+			<artifactId>platform-common</artifactId>
+			<version>1.0-SNAPSHOT</version>
+			<type>jar</type>
+		</dependency>
+		<dependency>
+			<groupId>org.ekstep</groupId>
+			<artifactId>graph-common</artifactId>
 			<version>1.0-SNAPSHOT</version>
 			<type>jar</type>
 		</dependency>
