--- a/platform-modules/manager/pom.xml
+++ b/platform-modules/manager/pom.xml
@@ -120,10 +120,9 @@
 	    		<groupId>com.datastax.cassandra</groupId>
 	    		<artifactId>cassandra-driver-core</artifactId>
 	    		<version>3.1.2</version>
-	    		<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>com.ilimi</groupId>
+			<groupId>org.ekstep</groupId>
   			<artifactId>cassandra-connector</artifactId>
   			<version>1.0-SNAPSHOT</version>
   			<type>jar</type>
