--- a/platform-jobs/samza/composite-search-indexer/pom.xml
+++ b/platform-jobs/samza/composite-search-indexer/pom.xml
@@ -44,11 +44,11 @@
 			<version>4.12</version>
 			<scope>test</scope>
 		</dependency>
-		<dependency>
+		<!-- <dependency>
 			<groupId>org.ekstep</groupId>
 			<artifactId>platform-dac</artifactId>
 			<version>1.0-SNAPSHOT</version>
-		</dependency>
+		</dependency> -->
 		<dependency>
 			<groupId>org.ekstep</groupId>
 			<artifactId>samza-common</artifactId>
