Issue #1336 feat: telemetry v3 implementation changes.

--- a/platform-core/pom.xml
+++ b/platform-core/pom.xml
@@ -26,7 +26,8 @@
 		<module>cassandra-connector</module>
 		<module>graph-engine</module>
 		<module>platform-dac</module>
-	</modules>
+    		<module>platform-telemetry</module>
+  </modules>
 
 	<dependencies>
 	</dependencies>
