--- a/platform-modules/service/src/main/resources/application.conf
+++ b/platform-modules/service/src/main/resources/application.conf
@@ -121,4 +121,4 @@ MAX_ITERATION_COUNT_FOR_SAMZA_JOB=2
 # DIAL Code Configuration
 dialcode.keyspace.name="dialcode_store"
 dialcode.keyspace.table="dial_code"
-MAX_NO_OF_ALLOWED_DIALCODE_PER_REQUEST=1000
+max.no.of.allowed.dialcode.per.request=1000
