Issue #1334 fix: config changes.

--- a/platform-modules/service/src/main/resources/application.conf
+++ b/platform-modules/service/src/main/resources/application.conf
@@ -121,4 +121,4 @@ MAX_ITERATION_COUNT_FOR_SAMZA_JOB=2
 # DIAL Code Configuration
 dialcode.keyspace.name="dialcode_store"
 dialcode.keyspace.table="dial_code"
-max.no.of.allowed.dialcode.per.request=1000
+dialcode.max_count=1000
