--- a/platform-core/platform-telemetry/pom.xml
+++ b/platform-core/platform-telemetry/pom.xml
@@ -16,14 +16,9 @@
 	</properties>
 	<dependencies>
 		<dependency>
-			<groupId>com.fasterxml.jackson.core</groupId>
-			<artifactId>jackson-core</artifactId>
-			<version>2.7.4</version>
-		</dependency>
-		<dependency>
-			<groupId>com.fasterxml.jackson.core</groupId>
-			<artifactId>jackson-databind</artifactId>
-			<version>2.7.4</version>
+			<groupId>org.ekstep</groupId>
+			<artifactId>platform-common</artifactId>
+			<version>1.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
