--- a/platform-modules/common/pom.xml
+++ b/platform-modules/common/pom.xml
@@ -67,6 +67,12 @@
 			<type>jar</type>
 		</dependency>
 		<dependency>
+			<groupId>org.ekstep</groupId>
+			<artifactId>platform-telemetry</artifactId>
+			<version>1.0-SNAPSHOT</version>
+			<type>jar</type>
+		</dependency>
+		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.12</version>
