Issue #1338 feat: Updated Test Config

--- a/platform-modules/manager/src/test/resources/application.conf
+++ b/platform-modules/manager/src/test/resources/application.conf
@@ -114,4 +114,4 @@ platform-api-url="http://localhost:8080/language-service"
 # DIAL Code Configuration
 dialcode.keyspace.name="dialcode_store"
 dialcode.keyspace.table="dial_code"
-MAX_NO_OF_ALLOWED_DIALCODE_PER_REQUEST=1000
+dialcode.max_count=1000
