Issue #1353 feat: Link DIAL Code API Updated Code

--- a/platform-modules/manager/src/test/resources/application.conf
+++ b/platform-modules/manager/src/test/resources/application.conf
@@ -112,6 +112,6 @@ connection-timeout=30
 platform-api-url="http://localhost:8080/language-service"
 
 # DIAL Code Configuration
-dialcode.keyspace.name="dialcode_store"
-dialcode.keyspace.table="dial_code"
+dialcode.keyspace.name="dialcode_store_test"
+dialcode.keyspace.table="dial_code_test"
 dialcode.max_count=1000
