Issue #000 fix: cassandra data migration changes.

--- a/platform-tools/spikes/cassandra-update/src/main/resources/application.conf
+++ b/platform-tools/spikes/cassandra-update/src/main/resources/application.conf
@@ -3,3 +3,5 @@ keyspace.name=script_store
 keyspace.table=script_data
 cassandra.host=localhost
 cassandra.port=9042
+cassandra.keyspace.from=dev_script_store
+cassandra.keyspace.to=test_script_store
