Issue #1353 feat: DIAL Code Error Codes and messages

--- a/platform-modules/service/src/main/resources/application.conf
+++ b/platform-modules/service/src/main/resources/application.conf
@@ -122,3 +122,8 @@ MAX_ITERATION_COUNT_FOR_SAMZA_JOB=2
 dialcode.keyspace.name="dialcode_store"
 dialcode.keyspace.table="dial_code"
 dialcode.max_count=1000
+
+
+# System Configuration
+system.config.keyspace.name="dialcode_store"
+system.config.table="system_config"
