Issue #1353 feat: Updated Code as per review comments

--- a/platform-modules/service/src/main/resources/application.conf
+++ b/platform-modules/service/src/main/resources/application.conf
@@ -123,7 +123,12 @@ dialcode.keyspace.name="dialcode_store"
 dialcode.keyspace.table="dial_code"
 dialcode.max_count=1000
 
-
 # System Configuration
 system.config.keyspace.name="dialcode_store"
 system.config.table="system_config"
+
+#DIAL Code Generator Configuration
+dialcode.strip.chars="0"
+dialcode.length=6.0
+dialcode.large.prime_number=1679979167
+
