Issue #1356 feat: Publisher API Implementation

--- a/platform-modules/service/src/main/resources/application.conf
+++ b/platform-modules/service/src/main/resources/application.conf
@@ -127,6 +127,10 @@ dialcode.max_count=1000
 system.config.keyspace.name="dialcode_store"
 system.config.table="system_config"
 
+#Publisher Configuration
+publisher.keyspace.name="dialcode_store"
+publisher.keyspace.table="publisher"
+
 #DIAL Code Generator Configuration
 dialcode.strip.chars="0"
 dialcode.length=6.0
