Issue #1353 feat: Publisher Validation Added, Config added for ES

--- a/platform-modules/service/src/main/resources/application.conf
+++ b/platform-modules/service/src/main/resources/application.conf
@@ -136,3 +136,7 @@ dialcode.strip.chars="0"
 dialcode.length=6.0
 dialcode.large.prime_number=1679979167
 
+#DIAL Code ElasticSearch Configuration
+dialcode_store.dial_code.index=true
+dialcode_store.dial_code.object_type="DialCode"
+
