--- a/platform-modules/service/src/main/resources/application.conf
+++ b/platform-modules/service/src/main/resources/application.conf
@@ -137,6 +137,6 @@ dialcode.length=6.0
 dialcode.large.prime_number=1679979167
 
 #DIAL Code ElasticSearch Configuration
-dialcode_store.dial_code.index=true
-dialcode_store.dial_code.object_type="DialCode"
+dialcode.index=true
+dialcode.object_type="DialCode"
 
