Issue #1338 feat: Updated DIAL Code Test Cases

--- a/platform-modules/manager/src/test/resources/application.conf
+++ b/platform-modules/manager/src/test/resources/application.conf
@@ -115,3 +115,20 @@ platform-api-url="http://localhost:8080/language-service"
 dialcode.keyspace.name="dialcode_store_test"
 dialcode.keyspace.table="dial_code_test"
 dialcode.max_count=1000
+
+# System Configuration
+system.config.keyspace.name="dialcode_store_test"
+system.config.table="system_config_test"
+
+#Publisher Configuration
+publisher.keyspace.name="dialcode_store_test"
+publisher.keyspace.table="publisher_test"
+
+#DIAL Code Generator Configuration
+dialcode.strip.chars="0"
+dialcode.length=6.0
+dialcode.large.prime_number=1679979167
+
+#DIAL Code ElasticSearch Configuration
+dialcode.index=false
+dialcode.object_type="DialCode"
